fixed concurrency issue by running 3 scripts

--- a/AnalyzingCommitHistories.ipynb
+++ b/AnalyzingCommitHistories.ipynb
@@ -591,6 +591,15 @@
     "x_values = ['c_'+str(value) for value in avg_commit_comp_df['commit_group_id']]\n",
     "plot_line_graph(x_values, total_y_values, listener_y_values, visitor_y_values, \"commits(1-10)\", \"Average Complexity\", \"All Repositories Complexity Distribution of linear commits\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_values_bar_graph = ['C_6_7_8', 'C_9_10', 'Complexity_shift']\n"
+   ]
   }
  ],
  "metadata": {
