--- a/AnalyzingCommitHistories.ipynb
+++ b/AnalyzingCommitHistories.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -313,7 +313,7 @@
        "[438 rows x 3 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -328,7 +328,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1444977\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(sum(repo_info_df['repo_total_commits']))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -337,7 +354,7 @@
        "(411, 3)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -351,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -462,7 +479,7 @@
        "2168                 111  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -476,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -508,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -517,7 +534,7 @@
        "(4110, 7)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -531,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -540,7 +557,7 @@
        "(4110, 8)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -561,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -570,7 +587,7 @@
        "(264, 2)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -584,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -593,7 +610,7 @@
        "(2640, 8)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -607,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -626,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -651,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -663,7 +680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -674,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -734,38 +751,232 @@
        "      <td>listener</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>433</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>22</td>\n",
+       "      <td>visitor</td>\n",
        "      <td>visitor</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>434</td>\n",
+       "      <td>40</td>\n",
+       "      <td>visitor</td>\n",
+       "      <td>visitor</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>70</td>\n",
+       "      <td>visitor</td>\n",
+       "      <td>visitor</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>80</td>\n",
+       "      <td>visitor</td>\n",
+       "      <td>visitor</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>89</td>\n",
+       "      <td>listener</td>\n",
+       "      <td>listener</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>146</td>\n",
+       "      <td>visitor</td>\n",
+       "      <td>visitor</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>155</td>\n",
+       "      <td>visitor</td>\n",
+       "      <td>visitor</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>167</td>\n",
+       "      <td>visitor</td>\n",
+       "      <td>visitor</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>177</td>\n",
+       "      <td>listener</td>\n",
+       "      <td>listener</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>179</td>\n",
+       "      <td>visitor</td>\n",
+       "      <td>visitor</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>204</td>\n",
+       "      <td>listener</td>\n",
+       "      <td>listener</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>223</td>\n",
+       "      <td>visitor</td>\n",
+       "      <td>visitor</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>226</td>\n",
+       "      <td>visitor</td>\n",
+       "      <td>visitor</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>263</td>\n",
+       "      <td>listener</td>\n",
+       "      <td>listener</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>265</td>\n",
+       "      <td>visitor</td>\n",
+       "      <td>visitor</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>290</td>\n",
+       "      <td>listener</td>\n",
+       "      <td>listener</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>293</td>\n",
+       "      <td>listener</td>\n",
+       "      <td>listener</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>309</td>\n",
+       "      <td>visitor</td>\n",
+       "      <td>visitor</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>342</td>\n",
+       "      <td>listener</td>\n",
+       "      <td>listener</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>349</td>\n",
+       "      <td>visitor</td>\n",
+       "      <td>visitor</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>356</td>\n",
+       "      <td>listener</td>\n",
+       "      <td>listener</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>370</td>\n",
+       "      <td>listener</td>\n",
+       "      <td>listener</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>425</td>\n",
+       "      <td>visitor</td>\n",
+       "      <td>visitor</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>431</td>\n",
+       "      <td>visitor</td>\n",
+       "      <td>visitor</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>432</td>\n",
+       "      <td>visitor</td>\n",
+       "      <td>visitor</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
        "      <td>NaN</td>\n",
        "      <td>listener</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>435</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>visitor</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>437</td>\n",
+       "      <td>5</td>\n",
        "      <td>NaN</td>\n",
        "      <td>listener</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>438</td>\n",
+       "      <td>8</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>visitor</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>10</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>listener</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>11</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>visitor</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>12</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>visitor</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>16</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>listener</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>21</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>visitor</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>24</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>listener</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>27</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>visitor</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>28</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>visitor</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>30</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>visitor</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>35</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>listener</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>36</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>listener</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>39</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>listener</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>41</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>visitor</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>42</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>visitor</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>43</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>visitor</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>44</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>visitor</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>45</td>\n",
        "      <td>NaN</td>\n",
        "      <td>visitor</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>262 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -776,17 +987,54 @@
        "9                     listener          listener\n",
        "18                     visitor           visitor\n",
        "20                    listener          listener\n",
-       "...                        ...               ...\n",
-       "433                        NaN           visitor\n",
-       "434                        NaN          listener\n",
-       "435                        NaN           visitor\n",
-       "437                        NaN          listener\n",
-       "438                        NaN           visitor\n",
-       "\n",
-       "[262 rows x 2 columns]"
+       "22                     visitor           visitor\n",
+       "40                     visitor           visitor\n",
+       "70                     visitor           visitor\n",
+       "80                     visitor           visitor\n",
+       "89                    listener          listener\n",
+       "146                    visitor           visitor\n",
+       "155                    visitor           visitor\n",
+       "167                    visitor           visitor\n",
+       "177                   listener          listener\n",
+       "179                    visitor           visitor\n",
+       "204                   listener          listener\n",
+       "223                    visitor           visitor\n",
+       "226                    visitor           visitor\n",
+       "263                   listener          listener\n",
+       "265                    visitor           visitor\n",
+       "290                   listener          listener\n",
+       "293                   listener          listener\n",
+       "309                    visitor           visitor\n",
+       "342                   listener          listener\n",
+       "349                    visitor           visitor\n",
+       "356                   listener          listener\n",
+       "370                   listener          listener\n",
+       "425                    visitor           visitor\n",
+       "431                    visitor           visitor\n",
+       "432                    visitor           visitor\n",
+       "3                          NaN          listener\n",
+       "5                          NaN          listener\n",
+       "8                          NaN           visitor\n",
+       "10                         NaN          listener\n",
+       "11                         NaN           visitor\n",
+       "12                         NaN           visitor\n",
+       "16                         NaN          listener\n",
+       "21                         NaN           visitor\n",
+       "24                         NaN          listener\n",
+       "27                         NaN           visitor\n",
+       "28                         NaN           visitor\n",
+       "30                         NaN           visitor\n",
+       "35                         NaN          listener\n",
+       "36                         NaN          listener\n",
+       "39                         NaN          listener\n",
+       "41                         NaN           visitor\n",
+       "42                         NaN           visitor\n",
+       "43                         NaN           visitor\n",
+       "44                         NaN           visitor\n",
+       "45                         NaN           visitor"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -800,12 +1048,12 @@
     "\n",
     "# _merging commit 1 and commit 10 pattern dataframes based on the repo index\n",
     "repo_pattern_df = pd.merge(repo_pattern_df_1, repo_pattern_df_10, on = 'repo_index', how='outer')\n",
-    "repo_pattern_df"
+    "repo_pattern_df.head(50)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -831,7 +1079,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -844,7 +1092,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -856,7 +1104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
