adding changes for three test case development

--- a/AnalyzingCommitHistories.ipynb
+++ b/AnalyzingCommitHistories.ipynb
@@ -493,6 +493,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "repo_commit_df"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
    "outputs": [],
