made few enhancement changes

--- a/AnalyzingCommitHistories.ipynb
+++ b/AnalyzingCommitHistories.ipynb
@@ -949,21 +949,69 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "No.of Repositories switched antlr patterns - 0\n"
+      "262\n"
      ]
     }
    ],
    "source": [
+    "print(len(repo_pattern_df))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# _initializing pattern switch count to zero\n",
+    "pattern_begin_listener_cnt = 0\n",
+    "pattern_begin_visitor_cnt = 0\n",
     "pattern_switch_cnt = 0\n",
+    "pattern_none_listener_cnt = 0\n",
+    "pattern_none_visitor_cnt = 0\n",
     "\n",
     "# _incrementing count, if there are any switch (start pattern is different from end pattern)\n",
     "for repo_index, start_pattern, end_pattern in zip(repo_pattern_df.index, repo_pattern_df['start_antlr_pattern'], repo_pattern_df['end_antlr_pattern']):\n",
-    "    if start_pattern in ('visitor', 'listener') and start_pattern != end_pattern:\n",
-    "        print(f'Repository {repo_index} switched from {start_pattern} pattern to {end_pattern}')\n",
-    "        pattern_switch_cnt += 1\n",
+    "    if start_pattern in ('visitor', 'listener') and end_pattern in ('visitor', 'listener'):     \n",
     "        \n",
-    "print(f'No.of Repositories switched antlr patterns - {pattern_switch_cnt}')"
+    "        if start_pattern == 'visitor':\n",
+    "            pattern_begin_visitor_cnt +=1 \n",
+    "        elif start_pattern == 'listener':\n",
+    "            pattern_begin_listener_cnt += 1\n",
+    "        \n",
+    "        if start_pattern != end_pattern:\n",
+    "            print(f'Repository {repo_index} switched from {start_pattern} pattern to {end_pattern}')\n",
+    "            pattern_switch_cnt += 1\n",
+    "        \n",
+    "    elif start_pattern not in ('visitor', 'listener') and end_pattern == 'visitor':\n",
+    "        pattern_none_visitor_cnt += 1\n",
+    "    elif start_pattern not in ('visitor', 'listener') and end_pattern == 'listener':\n",
+    "        pattern_none_listener_cnt += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No.of Repositories having listener pattern at the beginning - 12\n",
+      "No.of Repositories having visitor pattern at the beginning - 18\n",
+      "No.of Repositories switched antlr patterns - 0\n",
+      "No.of Repositories which adopted listener pattern at the end - 117\n",
+      "No.of Repositories which adopted visitor pattern at the end - 115\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'No.of Repositories having listener pattern at the beginning - {pattern_begin_listener_cnt}')\n",
+    "print(f'No.of Repositories having visitor pattern at the beginning - {pattern_begin_visitor_cnt}')   \n",
+    "print(f'No.of Repositories switched antlr patterns - {pattern_switch_cnt}')\n",
+    "print(f'No.of Repositories which adopted listener pattern at the end - {pattern_none_listener_cnt}')\n",
+    "print(f'No.of Repositories which adopted visitor pattern at the end - {pattern_none_visitor_cnt}')"
    ]
   },
   {
@@ -975,7 +1023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -988,7 +1036,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1000,7 +1048,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
